@@ -1,6 +1,9 @@
 === Deluge 1.3.0 (In Development) ===
 ==== Core ====
   * Implement #1063 option to delete torrent file copy on torrent removal - patch from Ghent
+  * Implement #457 progress bars for folders
+
+==== GtkUI ====
 
 === Deluge 1.2.0 (In Development) ===
 ==== Core ====
